Revert "Fix #59: Stretched content"
This reverts commit 71abe5509684383e1ec2c89fe77d3e5c936f630c.

--- a/src/style/widescreenMode.less
+++ b/src/style/widescreenMode.less
@@ -408,6 +408,7 @@ body[class] {
           justify-content: center;
           max-width: 100%;
           max-height: 100%;
+          width: auto !important;
 
           .item-image-thumb {
             display: none !important;
